fixed page-hero--blurb  lineheight, padding-top, letter-spacing

--- a/logical-solutions/styles/3-elements/hero-image.sass
+++ b/logical-solutions/styles/3-elements/hero-image.sass
@@ -52,10 +52,11 @@
     color: white
     font-size: 3rem
     margin-top: 20rem
-    padding-top: 2rem
+    padding-top: 3rem
     width: 77.5rem
+    line-height: 1.25
     @extend .text-thin
-    letter-spacing: 2px
+    letter-spacing: .05rem
     position: relative
 
     &::after
